Fix center layout issue

--- a/assets/styles/_overrides.scss
+++ b/assets/styles/_overrides.scss
@@ -266,18 +266,6 @@ body {
   flex: 1;
 }
 
-@media screen and (min-width: 768px) {
-  ._default__main {
-    margin: 1rem 0 2rem 0;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  ._default__main {
-    margin: 1rem 1rem 2rem 1rem;
-  }
-}
-
 // layouts/error.vue
 ._center_view {
   height: 100vh;
